add page consigment

--- a/consignment_page.html
+++ b/consignment_page.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Страница новости </title>
+    <title>Пария станица</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
@@ -221,22 +221,22 @@
         </li>
         <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            Карантин відступає: повноцінна робота ресторанів та подорожі літаком
+            Що для Вас управління містом у смартфоні?
         </li>
     </ul>
-    <section class="page_news">
+    <section class="page_news consignment_page">
         <div class="page_news_top">
-            <h1 class="text_big_all">Карантин відступає: повноцінна робота ресторанів та подорожі літаком</h1>
-        </div>
-        <div class="container_news_items_t">
-            <div class="label_all pink">
-                Новини міста
-            </div>
-            <div class="date_all">12.06.2020</div>
+            <h1 class="text_big_all">Що для Вас управління містом у смартфоні?</h1>
         </div>
         <div class="news_page">
             <div class="news_page_l">
-                <div class="news_page_l_content">
+                <div class="news_page_l_content consignment_page_l_content">
+                    <div class="news_page_l_content_size consignment_page_b">
+                        <p>Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили свої
+                            аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не забувати
+                            мити руки з милом, обробляти їх антисептиками та носити захисні маски.
+                        </p>
+                    </div>
                     <img src="./img/image%2014.png" alt="">
                     <div class="news_page_l_content_size">
                         <p>До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою або
@@ -272,204 +272,77 @@
                             </li>
                             <li>Отримайте паспорт у формі картки на 4 роки.</li>
                         </ul>
-                        <h3>Користуйтеся цифровими паспортами у П’ятому апеляційному адміністративному суді
-                            Одеси. </h3>
-                        <i>Інформація у ньому легка для сприйняття і розподіляється за темами: залежно від сфери
-                            діяльності ви можете знайти потрібну послугу. Транспорт, будівництво та нерухомість,
-                            інтелектуальна власність, соціальний захист, реєстрація бізнесу — це неповний перелік
-                            сфер послуг, що містяться у Гіді.</i>
-                        <div class="post_scriptum">Александр Волошин</div>
-
                     </div>
-                    <div class="slider_news">
-                        <div class="slider_block">
-                            <div class="button_left arrow_slider"><img src="./img/arrow_pagination.svg" alt=""></div>
-                            <div class="number_list_slider">
-                                <div class="number_start">1</div>
-                                <div class="rectangle_stick"></div>
-                                <div class="number_end">22</div>
-                            </div>
-                            <div class="button_right arrow_slider">
-                                <img src="./img/arrow_pagination.svg" alt="">
-                            </div>
+                    <div class="video_block">
+                        <div class="button_play">
+                            <img src="./img/Polygon%202.svg" class="img-svg" alt="">
                         </div>
-                        <div class="slider_wrapper">
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                        </div>
+                        <video controls width="710" height="538" poster="./img/Rectangle%2017.png" preload="none">
+                            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
+                                    type="video/mp4">
+                        </video>
                     </div>
                 </div>
 
             </div>
-            <div class="news_page_r">
-                <div class="soc_subscribe_grid share_news">
-                    <div class="soc_subscribe_items">
-                        <div class="soc_subscribe_items_text">Поділитись новиною:</div>
-                        <div class="header_top_soc_link">
-                            <a href="#" target="_blank"><img src="./img/Fasebook%201.svg" class="img-svg" alt=""></a>
-                            <a href="#" target="_blank"><img src="./img/Twitter.svg" class="img-svg" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="soc_subscribe_items ">
-                        <div class="soc_subscribe_items_text">Відправити другу у мессенджер :</div>
-                        <div class="header_top_soc_link messenger">
-                            <a href="#" target="_blank"><img src="./img/Viber.svg" class="img-svg" alt=""></a>
-                            <a href="#" target="_blank"><img src="./img/Telegram.svg" class="img-svg" alt=""></a>
-                        </div>
-                    </div>
+            <div class="news_page_r consignment_page_r">
+                <div class="consignment_page_r_text">
+                    Брати участь в ініціативі
                 </div>
-                <div class="container_interview_items">
-                    <div class="label_interview">Опитування</div>
-                    <div class="container_interview_items_text">Що для Вас управління містом у смартфоні?</div>
-                    <p class="container_interview_items_text_s">
-                        Якійсь абзац тексту про те, навіщо виборцю проходити опитування і що він, як виборець, зможе
-                        допомогти, якщо він пройде це опитування. Якійсь абзац тексту про те. навіщо виборцю проходити
-                        опитування і що він.
-                    </p>
-                    <div class="container_interview_items_row">
-                        <div class="interview_icon">
-                            <img src="./img/poll%201.svg" alt="">
-                        </div>
-                        <div class="interview_text">
-                            <p>Опитування прошли вже:</p>
-                            <span>24 780 виборців</span>
+                <form class="ui form consignment_form">
+                    <div class="field">
+                        <label>Як тебе звати?</label>
+                        <input type="text" name="first-name" placeholder="Введіть Ваше ім’я та призвище">
+                    </div>
+                    <div class="field">
+                        <label>Напишіть свою e-mail пошту</label>
+                        <input type="text" name="last-name" placeholder="Наприклад: olga.ivanova@gmail.com">
+                    </div>
+                    <div class="field">
+                        <label>Введіть свій номер телефону</label>
+                        <input type="text" name="first-name" placeholder="+380 (__) - __ - __ - ___">
+                    </div>
+                    <div class="field">
+                        <label>Місто чи населений пункт</label>
+                        <select multiple="" class="ui search  dropdown">
+                            <option value="">Введіть Ваше місто/селище</option>
+                            <option value="AF">Afghanistan</option>
+                            <option value="AX">Åland Islands</option>
+                        </select>
+                    </div>
+                    <div class="checkbox_container field">
+                        <label>Виберіть Вашу стать</label>
+                        <div class="fields">
+                            <div class="field">
+                                <div class="ui checkbox">
+                                    <input type="checkbox" name="man" tabindex="0" class="hidden">
+                                    <label>Чоловік</label>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="ui checkbox">
+                                    <input type="checkbox" name="woman" tabindex="0" class="hidden">
+                                    <label>Жінка</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="container_button">
-                        <a href="#" class="button_all">Пройти опитування</a>
-                        <p>*Це займе не більш ніж три хвилини Вашого часу. Усього 20 питань.</p>
+                    <div class="content_personal">
+                        <div class="ui checkbox">
+                            <input type="checkbox" name="example">
+                            <label>Згода на обробку персональних даних</label>
+                        </div>
+                        <button class="ui primary button button_all ">
+                            Приєднатися до наc
+                        </button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
 
 
     </section>
 </div>
-<section class="container_all container_news">
-    <div class="container_news_top">
-        <div class="container_news_text text_big">Новини</div>
-        <a href="#" class="link_news">
-            Всі новини
-            <div class="arrow_news">
-                <img src="./img/arrow.svg" alt="">
-            </div>
-        </a>
-    </div>
-    <div class="container_news_bottom">
-        <div class="container_news_b_left">
-            <a href="#">
-                <div class="container_news_img">
-                    <img src="./img/Rectangle%2026.png" alt="">
-                    <div class="label_all">
-                        Головні новини
-                    </div>
-                </div>
-            </a>
-            <div class="container_news_content">
-                <div class="container_news_content_t_b">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-            </div>
-        </div>
-        <div class="container_news_b_right">
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all pink">
-                        Головні новини
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all yellow">
-                        Новини регіону
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all yellow">
-                        Новини регіону
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all pink">
-                        Головні новини
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="container_idea container_all">
     <div class="container_idea_items">
         <div class="container_idea_icon">
