--- a/join_page.html
+++ b/join_page.html
@@ -38,7 +38,7 @@
                         <a class="item active" data-tab="fourth">
                             <div class="item_number">1</div>
                             <div class="icon_success">
-                                <img src="imguccses.svg" alt="">
+                                <img src="img/succses.svg" alt="">
                             </div>
                             <div class="item_number_text">Напиши ім’я та пошту</div>
                         </a>
@@ -293,7 +293,7 @@
                     </div>
                     <div class="video_block">
                         <div class="button_play">
-                            <img src="/img/Polygon%202.svg" class="img-svg" alt="">
+                            <img src="./img/Polygon%202.svg" class="img-svg" alt="">
                         </div>
                         <video controls width="710" height="538" poster="./img/Rectangle%2017.png" preload="none">
                             <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
