add consigment and result and news and voter page

--- a/results.html
+++ b/results.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Страница новости </title>
+    <title>Резултат</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
@@ -210,133 +210,104 @@
         </div>
     </div>
 </header>
-<div class="container_all container_home container_news_page_next">
+<div class="container_all container_home container_voter">
     <ul class="bread_crumbs">
         <li class="bread_link">
             <a href="#">Головна</a>
         </li>
         <li class="bread_link">
-            <img src="./img/arrow_left.svg" alt="">
-            <a href="#">Новини</a>
+            <a href="#">
+                <img src="./img/arrow_left.svg" alt="">
+                Опитування виборців
+            </a>
         </li>
         <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            Карантин відступає: повноцінна робота ресторанів та подорожі літаком
+            Результат опитування
         </li>
     </ul>
-    <section class="page_news">
-        <div class="page_news_top">
-            <h1 class="text_big_all">Карантин відступає: повноцінна робота ресторанів та подорожі літаком</h1>
+    <section class="voter">
+        <div class="page_news_top voter_top">
+            <h1 class="text_big_all">Результат опитування </h1>
         </div>
-        <div class="container_news_items_t">
-            <div class="label_all pink">
-                Новини міста
-            </div>
-            <div class="date_all">12.06.2020</div>
-        </div>
-        <div class="news_page">
-            <div class="news_page_l">
-                <div class="news_page_l_content">
-                    <img src="./img/image%2014.png" alt="">
-                    <div class="news_page_l_content_size">
-                        <p>До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою або
-                            закордонним паспортом у Дії.
-                        </p>
-                        <p>
-                            Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
-                            обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
-                            п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення
-                            релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
-                        </p>
-                        <p>
-                            Крім цього, з 15 червня відновлюється міжнародне авіасполучення з країнами, які відкрили
-                            свої аеропорти для літаків з України. Боротьба з пандемією ще триває, тому закликаємо не
-                            забувати мити руки з милом, обробляти їх антисептиками та носити захисні маски.</p>
-                        <h3>Сьогодні на засіданні Уряд послабив карантин. З 5 червня дозволено роботу ресторанів та
-                            кафе, а також внутрішні авіаперевезення.</h3>
-                        <p>
-                            Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна умова —
-                            обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим 60 років, з
-                            п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили проведення
-                            релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують студентів.
-                        </p>
-                        <h3>Нагадаємо, як отримати послугу ID-14:</h3>
-                        <ul>
-                            <li>Зберіть документи: свідоцтво про народження, довідку про реєстрацію місця проживання та
-                                документи, що посвідчують батьків або одного з них.
-                            </li>
-                            <li>Зверніться до центру надання адміністративних послуг, підрозділу Державної міграційної
-                                служби чи центру обслуговування “Паспортний сервіс” ДП “Документ” за зареєстрованим
-                                місцем проживання. Під час карантину можна звернутися до будь-якого з них незалежно від
-                                реєстрації місця проживання.
-                            </li>
-                            <li>Отримайте паспорт у формі картки на 4 роки.</li>
-                        </ul>
-                        <h3>Користуйтеся цифровими паспортами у П’ятому апеляційному адміністративному суді
-                            Одеси. </h3>
-                        <i>Інформація у ньому легка для сприйняття і розподіляється за темами: залежно від сфери
-                            діяльності ви можете знайти потрібну послугу. Транспорт, будівництво та нерухомість,
-                            інтелектуальна власність, соціальний захист, реєстрація бізнесу — це неповний перелік
-                            сфер послуг, що містяться у Гіді.</i>
-                        <div class="post_scriptum">Александр Волошин</div>
+        <div class="news_page voter_page_grid">
+            <div class="voter_page_grid_r result_r">
+                <div class="voter_page_grid_l_text">Найбільш популярні выдповіді
+                </div>
+                <div class="result_grid ">
 
-                    </div>
-                    <div class="slider_news">
-                        <div class="slider_block">
-                            <div class="button_left arrow_slider"><img src="./img/arrow_pagination.svg" alt=""></div>
-                            <div class="number_list_slider">
-                                <div class="number_start">1</div>
-                                <div class="rectangle_stick"></div>
-                                <div class="number_end">22</div>
-                            </div>
-                            <div class="button_right arrow_slider">
-                                <img src="./img/arrow_pagination.svg" alt="">
-                            </div>
+                    <div class="result_items">
+                        <div class="result_items_text">
+                            1. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
+                            та
+                            нижче будуть йти варіанти відповідей?
                         </div>
-                        <div class="slider_wrapper">
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
+                        <div class="result_items_text_b">
+                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може бути і
+                            короткий.
+                        </div>
+                        <div class="result_row">
+                            <div class="result_line">
+                                <div></div>
                             </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
+                            <div class="result_line_number">64%</div>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <div class="result_items_text">
+                            1. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
+                            та
+                            нижче будуть йти варіанти відповідей?
+                        </div>
+                        <div class="result_items_text_b">
+                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може бути і
+                            короткий.
+                        </div>
+                        <div class="result_row">
+                            <div class="result_line">
+                                <div></div>
                             </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
+                            <div class="result_line_number">24%</div>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <div class="result_items_text">
+                            1. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
+                            та
+                            нижче будуть йти варіанти відповідей?
+                        </div>
+                        <div class="result_items_text_b">
+                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може бути і
+                            короткий.
+                        </div>
+                        <div class="result_row">
+                            <div class="result_line">
+                                <div></div>
                             </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
+                            <div class="result_line_number">94%</div>
+                        </div>
+                    </div>
+                    <div class="result_items">
+                        <div class="result_items_text">
+                           2. Якась назва питання, може бути декілька строчек або більше ніж дві строчки. Назва питання
+                            та
+                            нижче будуть йти варіанти відповідей?
+                        </div>
+                        <div class="result_items_text_b">
+                            Варіант відповді на питання.
+                        </div>
+                        <div class="result_row">
+                            <div class="result_line">
+                                <div></div>
                             </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
-                            <div class="slider_news_item">
-                                <img src="./img/Rectangle%203.1.png" alt="">
-                            </div>
+                            <div class="result_line_number">100%</div>
                         </div>
                     </div>
                 </div>
 
             </div>
-            <div class="news_page_r">
-                <div class="soc_subscribe_grid share_news">
-                    <div class="soc_subscribe_items">
-                        <div class="soc_subscribe_items_text">Поділитись новиною:</div>
-                        <div class="header_top_soc_link">
-                            <a href="#" target="_blank"><img src="./img/Fasebook%201.svg" class="img-svg" alt=""></a>
-                            <a href="#" target="_blank"><img src="./img/Twitter.svg" class="img-svg" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="soc_subscribe_items ">
-                        <div class="soc_subscribe_items_text">Відправити другу у мессенджер :</div>
-                        <div class="header_top_soc_link messenger">
-                            <a href="#" target="_blank"><img src="./img/Viber.svg" class="img-svg" alt=""></a>
-                            <a href="#" target="_blank"><img src="./img/Telegram.svg" class="img-svg" alt=""></a>
-                        </div>
-                    </div>
-                </div>
+            <div class="voter_page_grid_r news_page_r">
+
                 <div class="container_interview_items">
                     <div class="label_interview">Опитування</div>
                     <div class="container_interview_items_text">Що для Вас управління містом у смартфоні?</div>
@@ -359,117 +330,11 @@
                         <p>*Це займе не більш ніж три хвилини Вашого часу. Усього 20 питань.</p>
                     </div>
                 </div>
+
             </div>
         </div>
-
-
     </section>
 </div>
-<section class="container_all container_news">
-    <div class="container_news_top">
-        <div class="container_news_text text_big">Новини</div>
-        <a href="#" class="link_news">
-            Всі новини
-            <div class="arrow_news">
-                <img src="./img/arrow.svg" alt="">
-            </div>
-        </a>
-    </div>
-    <div class="container_news_bottom">
-        <div class="container_news_b_left">
-            <a href="#">
-                <div class="container_news_img">
-                    <img src="./img/Rectangle%2026.png" alt="">
-                    <div class="label_all">
-                        Головні новини
-                    </div>
-                </div>
-            </a>
-            <div class="container_news_content">
-                <div class="container_news_content_t_b">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-            </div>
-        </div>
-        <div class="container_news_b_right">
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all pink">
-                        Головні новини
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all yellow">
-                        Новини регіону
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all yellow">
-                        Новини регіону
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="container_news_items">
-                <div class="container_news_items_t">
-                    <div class="label_all pink">
-                        Головні новини
-                    </div>
-                    <div class="date_all">12.06.2020</div>
-                </div>
-                <div class="container_news_content_t_s">
-                    Тут повинен бути якись слоган заголовок
-                </div>
-                <div class="container_news_content_b">
-                    <a href="#" class="link_detailed">
-                        Детальніше
-                        <img src="./img/arrow.svg" class="img-svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="container_idea container_all">
     <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
@@ -495,7 +360,7 @@
         </div>
         <div class="container_idea_text">Як стати депутатом</div>
     </a>
-   <a href="#" class="container_idea_items">
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/mailing_2%201.svg" alt="">
         </div>
