--- a/consignment_page.html
+++ b/consignment_page.html
@@ -344,36 +344,36 @@
     </section>
 </div>
 <section class="container_idea container_all">
-    <div class="container_idea_items">
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/join_2.svg" alt="">
         </div>
         <div class="container_idea_text">Приєднуйся до нашої партіі</div>
-    </div>
-    <div class="container_idea_items">
+    </a>
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/elections_2.svg" alt="">
         </div>
         <div class="container_idea_text">Контролюй вибори</div>
-    </div>
-    <div class="container_idea_items">
+    </a>
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/idea_2%201.svg" alt="">
         </div>
         <div class="container_idea_text">Створюй власні ініціативи</div>
-    </div>
-    <div class="container_idea_items">
+    </a>
+    <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/politician_1%201.svg" alt="">
         </div>
         <div class="container_idea_text">Як стати депутатом</div>
-    </div>
-    <div class="container_idea_items">
+    </a>
+   <a href="#" class="container_idea_items">
         <div class="container_idea_icon">
             <img src="./img/mailing_2%201.svg" alt="">
         </div>
         <div class="container_idea_text">Будь в курсі там, де тобі зручно!</div>
-    </div>
+    </a>
 </section>
 <div class="container_subscribe container_all">
     <div class="container_subscribe_l">
