--- a/index.html
+++ b/index.html
@@ -253,37 +253,37 @@
         </div>
     </section>
     <section class="container_idea container_all">
-        <div class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/join_2.svg" alt="">
-            </div>
-            <div class="container_idea_text">Приєднуйся до нашої партіі</div>
+    <a href="#" class="container_idea_items">
+        <div class="container_idea_icon">
+            <img src="./img/join_2.svg" alt="">
         </div>
-        <div class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/elections_2.svg" alt="">
-            </div>
-            <div class="container_idea_text">Контролюй вибори</div>
+        <div class="container_idea_text">Приєднуйся до нашої партіі</div>
+    </a>
+    <a href="#" class="container_idea_items">
+        <div class="container_idea_icon">
+            <img src="./img/elections_2.svg" alt="">
         </div>
-        <div class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/idea_2%201.svg" alt="">
-            </div>
-            <div class="container_idea_text">Створюй власні ініціативи</div>
+        <div class="container_idea_text">Контролюй вибори</div>
+    </div>
+    <a href="#" class="container_idea_items">
+        <div class="container_idea_icon">
+            <img src="./img/idea_2%201.svg" alt="">
         </div>
-        <div class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/politician_1%201.svg" alt="">
-            </div>
-            <div class="container_idea_text">Як стати депутатом</div>
+        <div class="container_idea_text">Створюй власні ініціативи</div>
+    </a>
+    <a href="#" class="container_idea_items">
+        <div class="container_idea_icon">
+            <img src="./img/politician_1%201.svg" alt="">
         </div>
-        <div class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/mailing_2%201.svg" alt="">
-            </div>
-            <div class="container_idea_text">Будь в курсі там, де тобі зручно!</div>
+        <div class="container_idea_text">Як стати депутатом</div>
+    </a>
+   <a href="#" class="container_idea_items">
+        <div class="container_idea_icon">
+            <img src="./img/mailing_2%201.svg" alt="">
         </div>
-    </section>
+        <div class="container_idea_text">Будь в курсі там, де тобі зручно!</div>
+    </a>
+</section>
     <section class="container_all container_news">
         <div class="container_news_top">
             <div class="container_news_text text_big">Новини</div>
